--- a/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -1732,7 +1732,7 @@ La seconda possibilità invece consiste nell'avere dei prototipi usati per megli
 \subsubsection{Modello basato su componenti}
 Questo modello si basa sull'approccio orientato al riuso di componenti già esistenti, in modo da abbattere tempi e costi. Esso si differenzia per alcuni differenti fasi intermedie orientate al riuso:
 \begin{description}
-	\item [Analisi dei componenti] a partire dalla specifica dei requisiti, sono ricercati delle componenti già esistenti che possano soddisfare la specifica esistente.
+	\item [Analisi delle componenti] a partire dalla specifica dei requisiti, sono ricercati delle componenti già esistenti che possano soddisfare la specifica esistente.
 	\item [Modifica dei requisiti] i requisiti variano a seconda delle componenti che sono state identificate.
 	\item [Progettazione del sistema con riuso] viene tracciata l'architettura del sistema e sono progettate in dettaglio le componenti non disponibili al riuso.
 	\item [Sviluppo e integrazione] Sono sviluppate le componenti non esistenti ed esse sono integrate al sistema con riuso. L'integrazione e lo sviluppo possono non essere attività separate.
