--- a/Esterni/Specifica_tecnica/tex/appbackbone.tex
+++ b/Esterni/Specifica_tecnica/tex/appbackbone.tex
@@ -6,7 +6,7 @@
 
 L'appendice che segue è tratta e rielaborata dal libro \emph{Developing Backbone.js Applications}, \emph{Addy Osmani}, \emph{O'Reilly}.
 
-Il pattern seguito dal client di \proj{} ricalca il pattern di \jointjs, basato su \backbonejs. Classificare questo pattern non è un compito semplice: la comunità di Backbone.js è internamente divisa sull'effettiva natura del pattern che implementa. Molti sviluppatori JavaScript non vedono i pattern MVC (Model View Controller) e MVP (Model View Presenter) come mutualmente esclusivi, ma è possibile sviluppare una applicazione che possiede un componente simile al Presenter e considerarla ancora fondata su un tipo di MVC.
+Il pattern seguito dal client di \proj{} ricalca il pattern di \jointjs, basato su \backbonejs. Classificare questo pattern non è un compito semplice: la comunità di Backbone.js è internamente divisa sull'effettiva natura del pattern che implementa. Molti sviluppatori JavaScript non vedono i pattern MVC (Model View Controller) e MVP (Model View Presenter) come mutualmente esclusivi, ma è possibile sviluppare una applicazione che possiede una componente simile al Presenter e considerarla ancora fondata su un tipo di MVC.
 
 Alcuni sviluppatori pensano invece che Backbone.js sia più una implementazione del modello MVP: principalmente il Presenter consiste nella \texttt{Backbone.View}, il modello è rappresentato da \texttt{Backbone.Model} e le view sono rappresentate dai template HTML. 
 
