--- a/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -540,7 +540,7 @@ La verifica è un processo analitico che va implementato in due passi successivi
 	\subsubsection{Analisi dinamica} \label{sec:an_dinam}
 	I verificatori devono effettuare analisi dinamica sul codice tramite dei test . Questi devono verificare la correttezza del software e devono essere ripetibili. Come stabilito nel Piano di Qualifica, il prodotto deve superare tutti i test implementati.
 	\paragraph{Test di unità}
-		I test di unità hanno lo scopo di verificare che ogni singola unità (parte di un componente software) funzioni correttamente; definiamo un'unità come la più piccola quantità di software che conviene verificare da sola. Vengono identificati dalla seguente sintassi:
+		I test di unità hanno lo scopo di verificare che ogni singola unità (parte di una componente software) funzioni correttamente; definiamo un'unità come la più piccola quantità di software che conviene verificare da sola. Vengono identificati dalla seguente sintassi:
 			\[TU[Codice Test]\]
 	\paragraph{Test di integrazione}
 		I test di integrazione consentono di controllare che più unità funzionino assieme in modo corretto. Vengono identificati dalla seguente sintassi:
