redazione verbale 23 marzo

--- a/Esterni/Verbali/VE_16-12-21.tex
+++ b/Esterni/Verbali/VE_16-12-21.tex
@@ -18,7 +18,7 @@
 \begin{description}
 	\item[Orario] 14:30 - 16:00;
 	\item[Durata] 1 ore e 30 minuti;
-	\item[Luogo incontro] \ZU, sede di via Cittadella 7, Padova
+	\item[Luogo incontro] \ZU, sede di via Cittadella 7, Padova;
 	\item[Oggetto] discussione del capitolato d'appalto;
 	\item[Segretario] \AZ; 
 	\item[Partecipanti] \GP, \ALL.
