--- a/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -538,19 +538,19 @@ La verifica è un processo analitico che va implementato in due passi successivi
 	\end{description}
  
 	\subsubsection{Analisi dinamica} \label{sec:an_dinam}
-	I verificatori devono effettuare analisi dinamica sul codice tramite dei test . Questi devono verificare la correttezza del software e devono essere ripetibili. Come stabilito nel Piano di Qualifica, il prodotto deve superare tutti i test implementati.
-	\paragraph{Test di unità}
-		I test di unità hanno lo scopo di verificare che ogni singola unità (parte di una componente software) funzioni correttamente; definiamo un'unità come la più piccola quantità di software che conviene verificare da sola. Vengono identificati dalla seguente sintassi:
-			\[TU[Codice Test]\]
-	\paragraph{Test di integrazione}
-		I test di integrazione consentono di controllare che più unità funzionino assieme in modo corretto. Vengono identificati dalla seguente sintassi:
-			\[TI[Codice Test]\]
-	\paragraph{Test di sistema}
-		I test di sistema vengono eseguiti su un prodotto ritenuto completo per verificarne i requisiti. Vengono identificati dalla seguente sintassi:
-			\[TS[Codice Requisito]\]
-	\paragraph{Test di validazione}
-		I test di validazione vengono eseguiti con il proponente per collaudare il prodotto. Vengono identificati dalla seguente sintassi:
-			\[TV[Codice Requisito]\]
+	I verificatori devono effettuare analisi dinamica sul codice tramite dei test. Questi devono verificare la correttezza del software e devono essere ripetibili. Come stabilito nel Piano di Qualifica, il prodotto deve superare tutti i test implementati.
+
+	\paragraph{Test di unità} I test di unità verificano che ogni singola unità (parte di una componente software) funzioni correttamente; definiamo un'unità come la più piccola quantità di software che conviene verificare da sola. Vengono identificati dalla seguente sintassi:
+	\[TU[Codice Test]\]
+
+	\paragraph{Test di integrazione} I test di integrazione controllano che più unità funzionino assieme in modo corretto. Vengono identificati dalla seguente sintassi:
+	\[TI[Codice Test]\]
+
+	\paragraph{Test di sistema} I test di sistema vengono eseguiti su un prodotto ritenuto completo per verificarne i requisiti. Vengono identificati dalla seguente sintassi:
+	\[TS[Codice Requisito]\]
+
+	\paragraph{Test di validazione} I test di validazione vengono eseguiti con il proponente per collaudare il prodotto. Vengono identificati dalla seguente sintassi:
+	\[TV[Codice Requisito]\]
 
 \subsubsection{Metriche}
 	Nel contesto dell'attività di verifica dei processi istanziati nel corso dell'attività di progetto e dell'analisi statica dei relativi prodotti (codice, documenti, design architetturale) vengono in seguito definite delle metriche utili alla misurazione quantitativa degli obiettivi i qualità come definiti nella sezione relativa del documento \PdQ.
